add identity channels to support sending direct messages to identified chat participants